# raw-pytorch-sdxl

./: .gitignore  ADVANCED.md  CLAUDE.md  README.md  download_weights.sh  extract_lora_weights.py  generate_images.py  pyproject.toml  resume_training.py  resume_training.sh  run-sample.sh  train_sdxl.py  train_sdxl.sh
examples/: captions-subset-40k.txt  rental-onstart.md  rental-onstart.sh
examples/captioned-dalle/: 1k.txt
sampling/: __init__.py  inference.py
sdxl/: __init__.py  diffusion.py  lora.py  text_encoders.py  unet.py  vae.py
test_data/: gradient_000.txt  gradient_001.txt  gradient_002.txt  gradient_003.txt  gradient_004.txt  gradient_005.txt  gradient_006.txt  gradient_007.txt  gradient_008.txt  gradient_009.txt
training/: data_loader.py  ema.py  lora_checkpoint.py  lr_scheduler.py  precision_util.py  train_loop.py  train_util.py  validation.py
utils/: __init__.py  download_weights.py  download_weights.sh
